# cygen

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh
docker/: entrypoint.sh
src/: main.py  settings.py
src/router/: chat.py  upload.py
src/utils/: background_tasks.py  llm.py  pdf_processor.py  text_chunking.py  vector_store.py
streamlit/: Dockerfile  app.py  config.toml  run-docker.sh  run.sh  utils.py
