[project]
name = "cygen"
version = "0.1.0"
description = "Advanced RAG System with Groq LLM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    
    # FastAPI and Server
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Database
    "motor>=3.3.0",
    "qdrant-client>=1.7.0",

    # PDF Processing
    "PyPDF2>=3.0.0",

    # LLM and Embeddings
    "groq>=0.4.0",
    "fastembed>=0.2.0",
    "langchain>=0.1.9",

    # Utilities
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.3",
    "loguru>=0.7.2",
    "aiofiles>=23.2.1",

    # Streamlit UI
    "streamlit>=1.31.0",
    "streamlit-chat>=0.1.1",
    "httpx>=0.25.2",
    "watchdog>=3.0.0",
    "websocket-client>=1.8.0",
]
